# LLM-Playground

./: pyproject.toml
lora_based_fine_tuning/: README.md  __init__.py  bnb_config.py  fine_tuning.py  huggingface_models.py  lora_configs.py  pyproject.toml  requirements.txt  unsloth_models.py  utils.py
lora_based_fine_tuning/Docker/: Dockerfile
rag/: README.md  pyproject.toml  rag.py
