[tool.poetry]
name = "rag"
version = "0.1.0"
description = ""
authors = ["Sangh0 <hop7311@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-community = "^0.3.5"
nltk = "^3.9.1"
pypdf = "^5.1.0"
sentence-transformers = "^3.2.1"
faiss-cpu = "^1.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
